<resources>
    <string name="app_name">Story Apps Course</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_login">Login</string>
    <string name="description_login">Sign In to continue</string>
    <string name="title_register">Register</string>
    <string name="description_register">Sign Up to continue</string>
    <string name="title_login_page">Welcome Back</string>
    <string name="message_login_page">"Login!"</string>
    <string name="title_signup_page">Sign Up!</string>
    <string name="setting">Setting</string>
    <string name="story_deskripsi">Deskripsi Story</string>
    <string name="camera">Camera</string>
    <string name="detail">Detail</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="massage_logout">Do you want to exit?</string>
    <string name="upload">Upload</string>
    <string name="gallery">GALERI</string>
    <string name="description">Description</string>


    <string name="storyImage">photoUrl %s</string>
    <string name="storyDescription">description %s</string>
    <string name="storyName">name %s</string>
    <string name="image_detail">Image detail</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="data_not_loaded">Data not loaded</string>
    <string name="fab_popUP">popUP</string>
    <string name="fab_tambah">tambah</string>
    <string name="fab_keluar">logout</string>
    <string name="fab_map">Map</string>

    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="description_for_image">Login Page</string>
    <string name="input">Input your account!</string>
</resources>