<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.story.create.CreateStoryFragment">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="312dp"
        android:layout_height="200dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_image_24"
        tools:layout_editor_absoluteX="49dp" />

    <ProgressBar
        android:id="@+id/pb_create_story"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="260dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toTopOf="@+id/cameraButton" />

    <View
        android:layout_width="360dp"
        android:layout_height="190dp"
        android:id="@+id/viewDes"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/galleryButton"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/cameraButton"
        android:background="@drawable/rounded_border"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton"/>

    <EditText
        android:id="@+id/descriptionTextView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/galleryButton"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>