<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"/>

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:src="@drawable/intro" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="@dimen/button_corner_radius_main"
            app:backgroundTint="@color/purple_200" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="@dimen/button_corner_radius_main"
            app:backgroundTint="@color/purple_200" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





